mule-user-guide/v/3.5/datasense.adoc
=  DataSense

*DataSense*使用消息元数据来促进应用程序设计。借助此功能，Anypoint™Studio可以主动获取有关数据的信息，例如数据类型和结构，以便规定如何在应用程序中准确映射或使用这些数据。

Mule智能地发现这些信息，并用它来提出应用程序设计建议，而不是强迫你手动发现内部和外部资源所使用的数据信息。例如，如果您的应用程序必须连接到Twitter，则DataSense将捕获有关Twitter所使用的数据类型和结构的信息，然后使用这些信息向您建议您应发送给的数据类型，或期望从Twitter接收数据。

== 假设


本文档假定您熟悉可用于在Studio中创建应用程序的 link:/anypoint-studio/v/5/#the-visual-editor[Anypoint Studio中的可视化编辑器]， link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint™连接器]和 link:/anypoint-studio/v/5/datamapper-user-guide-and-reference[Anypoint DataMapper]转换器。此外，本文档引用 link:/mule-user-guide/v/3.7/connecting-using-transports[连接器]和 link:/mule-user-guide/v/3.6/global-elements[全球元素]。


==  DataSense功能

Studio提供了多种DataSense功能，以支持从外部资源主动发现元数据：

. 连接测试（对于选定的连接器）
. 感知流程设计
.  DataSense资源管理器

== 连接测试

该功能使您能够测试与外部资源的连接。在Studio中对应用程序进行建模时，在配置大多数支持DataSense的连接器时，您有机会测试其与服务或数据库的连接功能。与其等待您运行应用程序来测试连接，您可以在继续之前尽早测试以确认功能。

例如，如果要配置Anypoint Connector与Salesforce进行通信，则可以输入所需的配置值（登录凭据，主机和端口，代理设置），然后只需单击即可测试连接。 Mule向Salesforce提交一个调用来确认连接是否存在并且正常工作。

image:test+connection.png[测试+连接]


==== 感知流程设计

Mule采用了更多的步骤，使Perceptive Flow Design能够更轻松地设计您的应用程序。如果将流建模为包含Anypoint连接器（在Anypoint DataMapper转换器之前或之后），则Mule会使用与资源的工作连接（例如SaaS提供程序）来检索有关消息有效负载和属性的元数据。捕获SaaS采用的数据类型和结构，Mule将该数据馈送到DataMapper中，从而通知DataMapper期望的输入或输出。此功能有助于将数据从一种数据格式和结构映射到另一种数据，从而为您节省开发时间，否则您将花费​​时间尝试发现自己的结构和格式。

例如，假设您的任务是将您组织的Salesforce帐户与Twitter连接起来，以宣传特定的绩效指标。您的首要任务之一是检查两个SaaS提供商提供的可用文档，以确定其使用的数据结构类型，以便最终确定如何将一个结构映射到另一个结构。您可以利用感知流程设计，而不是通过疲惫的练习。将两个连接器放到Studio画布上 -  Salesforce和Twitter  - 然后配置它们，确保测试Salesforce的连接。确认连接后，只需在连接器之间放置一个DataMapper Transformer即可。打开DataMapper，发现Mule智能地捕获了每个SaaS提供商的数据类型和结构信息，并为您的数据映射规定了输入和输出。随着处方的到位，您所需要做的就是配置映射。

image:datamapper-1.png[DataMapper的-1]

作为一个更简单的例子，假设你正在从Twitter连接器获取状态更新数据，并且你想记录微博文本，但是你不熟悉这个连接器使用的属性名称。无需查找Twitter的文档以找出他们为您需要的属性挑选的任意名称，只需在Twitter连接器之后放置一个记录器消息处理器并写入即可。如果您在记录器的消息字段中开始编写*`#[payload.`*，然后按**ctrl + space bar**，您将获得与有效负载关联的所有属性和方法的列表，包括请求返回的属性，在Twitter连接器上重新执行。

image:payload+autocomplete.png[有效载荷+自动完成]

====  DataSense资源管理器

Studio中的这一便利功能允许您在设计时仍可在流的不同点预览消息数据结构。选择流程中的特定元素，然后单击DataSense Explorer图标（如下所示），并浏览进入和离开数据的结构。

image:datasense+logo.png[datasense +标志]

DataSense资源管理器允许您导航有效负载，流和会话变量，入站和出站属性以及记录变量。它将流元素的已知输出字段和兼容连接器的DataSense元数据考虑在内，以预测流中任何给定点的消息内容。对此，您可以很容易地找到哪些信息可用，哪些是您可能不知道的特定流程元素隐式创建的变量。

image:datasense+explorer2-1.png[datasense + explorer2-1]

==  DataSense最佳实践

要充分利用DataSense所提供的功能，设计时的最佳实践表明您应该按照以下顺序构建应用程序：

. 从数据流入和流出应用程序的流程开始。例如，首先配置一个HTTP端点，然后是一个Anypoint连接器。
. 配置端点和连接器 - 以及它们引用的全局配置 - 以便在可能的情况下，建立连接并使用DataSense提取有关使用外部源的预期输入或输出的任何元数据。
. 在您的流程中插入其他元素以丰富消息，设置，复制或删除变量或属性，路由消息等。
. 最后，将DataMapper转换器插入到您的流中，以调整消息的格式或结构，以便每个连接器都能接收到它所期望的输入。

此设计时策略的目标是设置集成难题的各个部分，然后使用DataMappers "glue them together"。这种类型的"align, then glue together"策略不是顺序设计流程，而是确保您在任何可能的情况下都利用DataSense将输入或输出数据的结构和格式信息预先填充到DataMapper中。

例如，如果您在应用程序中配置Salesforce连接器，然后将DataMapper放在其后面，则DataMapper使用DataSense提取的信息预先填充输入值以进行映射，以便您只需确认（或调整）输入选择，然后继续映射到所需的输出。换句话说，DataSense确保DataMapper确定它必须工作的数据格式和结构，因此您不必手动将其解决。无论何时您可以使用DataSense，您都会采取一种开发捷径，消除手动发现消息中所含数据格式和结构的麻烦。

== 另请参阅

* 了解如何向外部资源提供 link:/anypoint-studio/v/5/testing-connections[测试连接]。
* 请参阅 link:/anypoint-studio/v/5/datasense-enabled-connectors[启用了DataSense的连接器的列表]。
* 了解如何利用 link:/anypoint-studio/v/5/using-perceptive-flow-design[DataSense感知流程设计]。
* 了解如何使用 link:/anypoint-studio/v/5/using-the-datasense-explorer[DataSense资源管理器]预览邮件的内容
* 请参阅DataSense的行动！检查使用DataSense构建的示例应用程序： link:/anypoint-studio/v/5/Connect-with-Salesforce-Example[与Salesforce示例连接]
